feat: added routing

--- a/src/pronto-base-module/pages/LoginPage/LoginPage.scss
+++ b/src/pronto-base-module/pages/LoginPage/LoginPage.scss
@@ -1,4 +1,4 @@
-@import "../../assets/globals/variables.scss";
+@import "../../../pronto/assets/globals/variables.scss";
 .login-page-container {
   width: 30%;
   margin: 0 auto;
