--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import "./assets/globals/global.scss";
+@import "./pronto/assets/globals/global.scss";
 .app {
   padding: 5em 3em;
   min-height: 100vh;
