--- a/src/pronto/assets/globals/variables.scss
+++ b/src/pronto/assets/globals/variables.scss
@@ -1,12 +1,11 @@
 // Colors
-$primary: #ff7727;
-$primary-light: #69a5f8;
-$primary-dark: #0850b4;
-$secondary: #d8e6fc;
-$secondary-light: #ecf3fe;
-$secondary-dark: #a3c3f8;
-$tertiary: #9482fe;
-$tertiary-dark: #6b51fd;
+$color1: #3399ff;
+$color2: #ff5c2b;
+$color3: #9595aa;
+$color4: #e2e4ef;
+$color5: #4a4a4a;
+$color6: #fafafa;
+$color7: #9696a7; // title
 
 $white: #fff;
 $dark: #060606;
@@ -14,9 +13,9 @@ $dark: #060606;
 // Font sizes
 $headline-size: 24px;
 $section-title-size: 20px;
-$primary-size: 15px;
-$secondary-size: 13px;
-$tertiary-size: 17px;
+$primary-size: 14px;
+$secondary-size: 12px;
+$tertiary-size: 16px;
 
 $base-unit: 8px;
 
