--- a/src/pronto/components/pi-button/PIButton.scss
+++ b/src/pronto/components/pi-button/PIButton.scss
@@ -11,26 +11,26 @@
     transition: background 0.3s ease-in-out;
   }
   &.primary {
-    background-color: $primary;
+    background-color: $color1;
   }
   &.primary:hover {
-    background-color: $primary-dark;
+    background-color: $color3;
   }
 
   &.secondary {
-    background-color: $secondary;
-    color: $primary-dark;
+    background-color: $color4;
+    color: $color3;
   }
   &.secondary:hover {
-    background-color: $secondary-light;
+    background-color: $color5;
   }
 
   &.tertiary {
     background-color: $white;
-    color: $primary-dark;
+    color: $color3;
   }
   &.tertiary:hover {
-    background-color: $secondary-light;
+    background-color: $color5;
   }
 
   &.small {
@@ -38,6 +38,7 @@
     font-size: 14px;
   }
   &.default {
+    width: 100%;
     padding: 0.6em 4em;
     font-size: 15px;
   }
