--- a/src/pronto/components/pi-textarea/PITextarea.scss
+++ b/src/pronto/components/pi-textarea/PITextarea.scss
@@ -4,13 +4,13 @@
   width: 100%;
   resize: none;
   text-overflow: ellipsis;
-  border: 0.5px solid $secondary;
+  border: 0.5px solid $color4;
   border-radius: 3px;
-  outline: 0px solid $secondary-dark;
+  outline: 0px solid $color6;
   padding: 0.5em;
   transition: outline 0.2s ease-in-out;
   &:focus {
-    outline: 2px solid $secondary-dark;
+    outline: 2px solid $color6;
   }
   &.small {
     padding: 0.4em;
