--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import "./pronto/assets/globals/global.scss";
-.app {
-  padding: 5em 3em;
+
+#root {
+  position: relative;
   min-height: 100vh;
 }
