--- a/src/pronto/assets/globals/global.scss
+++ b/src/pronto/assets/globals/global.scss
@@ -1,9 +1,14 @@
 @import "./variables.scss";
 
+@font-face {
+  font-family: "Basier Square";
+  src: url("../../../assets/fonts/BasierSquare-Regular.woff");
+}
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Basier Square";
 }
 
 // Display Flex
