--- a/src/pronto/components/pi-dropdown/PIDropdown.scss
+++ b/src/pronto/components/pi-dropdown/PIDropdown.scss
@@ -4,7 +4,7 @@
   width: 100%;
   position: relative;
   display: flex;
-  border: 1px solid $secondary;
+  border: 1px solid $color4;
   border-radius: 3px;
   padding: 0.5em;
   .pi-dropdown-selected {
@@ -20,7 +20,7 @@
     justify-content: space-between;
   }
   .pi-dropdown-icon {
-    color: $secondary-dark;
+    color: $color6;
   }
   .pi-dropdown {
     display: none;
@@ -28,7 +28,7 @@
     top: 100%;
     left: 0;
     width: 100%;
-    border: 1px solid $secondary;
+    border: 1px solid $color4;
     border-bottom: 0;
     border-top: 0;
     cursor: default;
@@ -36,7 +36,7 @@
       display: block;
     }
     .pi-dropdown-search {
-      border-bottom: 1px solid $secondary;
+      border-bottom: 1px solid $color4;
     }
     .pi-dropdown-option {
       display: flex;
@@ -44,12 +44,12 @@
       align-items: center;
       justify-content: flex-start;
       gap: 0.7em;
-      border-bottom: 1px solid $secondary;
+      border-bottom: 1px solid $color4;
       padding: $base-unit;
       color: $dark;
     }
     .pi-dropdown-option:hover {
-      background-color: $secondary-light;
+      background-color: $color5;
     }
   }
 }
