--- a/src/pronto/components/pi-label/PILabel.scss
+++ b/src/pronto/components/pi-label/PILabel.scss
@@ -1,1 +1,12 @@
 @import "../../assets/globals/variables.scss";
+.pi-label {
+  &.small {
+    font-size: $secondary-size;
+  }
+  &.default {
+    font-size: $primary-size;
+  }
+  &.large {
+    font-size: $tertiary-size;
+  }
+}
